--- a/OnlineCourseProject/OnlineCourseApp/templates/login.html
+++ b/OnlineCourseProject/OnlineCourseApp/templates/login.html
@@ -38,7 +38,8 @@
             Sign Up
             <span class="underline"></span>
           </button>
-          <form class="form form-signup">
+          <form class="form form-signup" method="POST" action="{% url 'sign_up' %}">
+            {% csrf_token %}
             <fieldset>
               <legend>Please, enter your email, password and password confirmation for sign up.</legend>
               <div class="input-block">
