--- a/OnlineCourseProject/OnlineCourseApp/templates/login.html
+++ b/OnlineCourseProject/OnlineCourseApp/templates/login.html
@@ -11,23 +11,27 @@
 </head>
 <body>
     <section class="forms-section">
-      <h1 class="section-title">Animated Forms</h1>
+      <h1 class="section-title"></h1>
       <div class="forms">
         <div class="form-wrapper is-active">
           <button type="button" class="switcher switcher-login">
             Login
             <span class="underline"></span>
           </button>
-          <form class="form form-login">
+          <form class="form form-login" method="POST" action="{% url 'login' %}">
+            {% csrf_token %}
             <fieldset>
               <legend>Please, enter your email and password for login.</legend>
               <div class="input-block">
-                <label for="login-email">E-mail</label>
-                <input id="login-email" type="email" required>
+                <label for="login-username">Username</label>
+                <input id="login-username" name="username" type="text" required>
               </div>
               <div class="input-block">
                 <label for="login-password">Password</label>
-                <input id="login-password" type="password" required>
+                <input id="login-password" name="password" type="password" required>
+              </div>
+              <div class="input-block">
+                {{ errorMsg }}
               </div>
             </fieldset>
             <button type="submit" class="btn-login">Login</button>
@@ -42,18 +46,6 @@
             {% csrf_token %}
             <fieldset>
               <legend>Please, enter your email, password and password confirmation for sign up.</legend>
-              <div class="input-block">
-                <label for="signup_first_name">FirstName</label>
-                <input id="signup_first_name" name='first_name' type="text" required>
-              </div>
-              <div class="input-block">
-                <label for="signup_last_name">LastName</label>
-                <input id="signup_last_name" name='last_name' type="text" required>
-              </div>
-               <div class="input-block">
-                <label for="signup_national_code">nationalCode</label>
-                <input id="signup_national_code" name='national_code' type="text" required>
-              </div>
               <div class="input-block">
                 <label for="signup_email">E-mail</label>
                 <input id="signup_email" name="email" type="email" required>
