--- a/OnlineCourseProject/OnlineCourseApp/templates/login.html
+++ b/OnlineCourseProject/OnlineCourseApp/templates/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Login</title>
     {% load static %}
-    <link rel='stylesheet' type='text/css' href="{% static 'css/onlineCourse.css' %}" />
+    <link rel='stylesheet' type='text/css' href="{% static 'css/loginPage.css' %}" />
     <script type='text/javascript' charset='utf8' src="{% static 'js/jquery-1.11.3.min.js' %}"></script>
     <script type='text/javascript' charset='utf8' src="{% static 'js/onlineCourse.js' %}"></script>
 
