--- a/OnlineCourseProject/OnlineCourseApp/static/css/dashboard.css
+++ b/OnlineCourseProject/OnlineCourseApp/static/css/dashboard.css
@@ -2,3 +2,19 @@ body{
     background: rgb(28,239,255);
     background: radial-gradient(circle, rgba(28,239,255,1) 0%, rgba(213,213,187,1) 100%);
 }
+
+#topPageDiv{
+    color : white;
+    height : 60px;
+    width :100%;
+    background : rgba(45, 88, 91, 0.37);
+}
+
+#userInfromationDiv{
+    width : 100px;
+}
+
+#logoutDiv{
+    width : 60px;
+    float: left;
+}
