--- a/OnlineCourseProject/OnlineCourseApp/templates/dashboard.html
+++ b/OnlineCourseProject/OnlineCourseApp/templates/dashboard.html
@@ -9,5 +9,12 @@
 
 </head>
 <body>
+    <div id="topPageDiv">
+        <div id="userInfromationDiv">
+            <input type="button" id="editProfile" name="changeInfo" value="Edit Profile"/>
+            <div id="firsname_lastname" name="firsname_lastname">{{ firstname }} {{ lastname }}</div>
+        </div>
+        <div id="logoutDvi"><a href="/logout">Logout</a></div>
+    </div>
 </body>
 </html>
