--- a/OnlineCourseProject/OnlineCourseApp/templates/dashboard.html
+++ b/OnlineCourseProject/OnlineCourseApp/templates/dashboard.html
@@ -11,7 +11,10 @@
 <body>
     <div id="topPageDiv">
         <div id="userInfromationDiv">
-            <input type="button" id="editProfile" name="changeInfo" value="Edit Profile"/>
+            <form method="Pupdate_profile_dataOST" action="{% url 'edit_profile' %}">
+                {% csrf_token %}
+                <input type="submit" id="editProfile" name="changeInfo" value="Edit Profile"/>
+            </form>
             <div id="firsname_lastname" name="firsname_lastname">{{ firstname }} {{ lastname }}</div>
         </div>
         <div id="logoutDvi"><a href="/logout">Logout</a></div>
