OnlineCourseApp  - added login date time to session

--- a/OnlineCourseProject/OnlineCourseApp/templates/dashboard.html
+++ b/OnlineCourseProject/OnlineCourseApp/templates/dashboard.html
@@ -19,5 +19,9 @@
         </div>
         <div id="logoutDvi"><a href="/logout">Logout</a></div>
     </div>
+    <div>
+        {{ request.session.lastLoginTime }}
+        {{ request.session.electronicWallet }}
+    </div>
 </body>
 </html>
