--- a/OnlineCourseProject/OnlineCourseApp/templates/dashboard.html
+++ b/OnlineCourseProject/OnlineCourseApp/templates/dashboard.html
@@ -1,27 +1,19 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
-    {% load static %}
     <link rel='stylesheet' type='text/css' href="{% static 'css/dashboard.css' %}" />
     <script type='text/javascript' charset='utf8' src="{% static 'js/jquery-1.11.3.min.js' %}"></script>
 
 </head>
 <body>
-    <div id="topPageDiv">
-        <div id="userInfromationDiv">
-            <form method="Pupdate_profile_dataOST" action="{% url 'edit_profile' %}">
-                {% csrf_token %}
-                <input type="submit" id="editProfile" name="changeInfo" value="Edit Profile"/>
-            </form>
-            <div id="firsname_lastname" name="firsname_lastname">{{ firstname }} {{ lastname }}</div>
-        </div>
-        <div id="logoutDvi"><a href="/logout">Logout</a></div>
-    </div>
-    <div>
-        {{ request.session.lastLoginTime }}
-        {{ request.session.electronicWallet }}
+    {% include 'headerMenu.html' %}
+    <div id="dashboardMenu" dir="rtl">
+        <a href="{% url 'search_courses' %}"><img src="{% static 'images/searchCourses.png' %}"></a>
+        <a href="{% url 'my_courses' %}"><img src="{% static 'images/myCourses.png' %}"></a>
+        <a href="{% url 'edit_profile' %}"><img src="{% static 'images/editProfile.png' %}"></a>
     </div>
 </body>
 </html>
