--- a/OnlineCourseProject/OnlineCourseApp/templates/search_courses.html
+++ b/OnlineCourseProject/OnlineCourseApp/templates/search_courses.html
@@ -17,14 +17,16 @@
 </head>
 <body>
 {% include 'headerMenu.html' %}
-<table border="2">
-    <tr>
-        <th>image</th>
-        <th>courseId</th>
-        <th>title</th>
-        <th>price</th>
-        <th>category</th>
-    </tr>
+<table class="table table-striped table-hover">
+    <thead class="thead-light">
+        <tr>
+            <th scope="col">image</th>
+            <th scope="col">courseId</th>
+            <th scope="col">title</th>
+            <th scope="col">price</th>
+            <th scope="col">category</th>
+        </tr>
+    </thead>
     {% for course in courses %}
         <tr>
             <td><img src="{{course.image.url}}"></td>
