--- a/OnlineCourseProject/OnlineCourseApp/templates/search_courses.html
+++ b/OnlineCourseProject/OnlineCourseApp/templates/search_courses.html
@@ -17,26 +17,27 @@
 </head>
 <body>
 {% include 'headerMenu.html' %}
-<table class="table table-striped table-hover">
-    <thead class="thead-light">
-        <tr>
-            <th scope="col">image</th>
-            <th scope="col">courseId</th>
-            <th scope="col">title</th>
-            <th scope="col">price</th>
-            <th scope="col">category</th>
-        </tr>
-    </thead>
-    {% for course in courses %}
-        <tr>
-            <td><img src="{{course.image.url}}"></td>
-            <td>{{course.courseId}}</td>
-            <td>{{course.title}}</td>
-            <td>{{course.price}}</td>
-            <td>{{course.category}}</td>
-        </tr>
-    {% endfor %}
-</table>
-
+<div class="searchCourseTableContainer">
+    <table class="table table-striped table-hover">
+        <thead class="thead-light">
+            <tr>
+                <th scope="col">image</th>
+                <th scope="col">courseId</th>
+                <th scope="col">title</th>
+                <th scope="col">price</th>
+                <th scope="col">category</th>
+            </tr>
+        </thead>
+        {% for course in courses %}
+            <tr>
+                <td><img class='courseImage' src="{{course.image.url}}"></td>
+                <td>{{course.courseId}}</td>
+                <td>{{course.title}}</td>
+                <td>{{course.price}} $</td>
+                <td>{{course.category}}</td>
+            </tr>
+        {% endfor %}
+    </table>
+</div>
 </body>
 </html>
