--- a/OnlineCourseProject/OnlineCourseApp/templates/index.html
+++ b/OnlineCourseProject/OnlineCourseApp/templates/index.html
@@ -17,6 +17,7 @@
     <link href="{% static 'css/style.css' %}" rel="stylesheet" />
   <!-- Google	Fonts -->
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css' />
+    <link href="{% static 'css/dashboard.css' %}" rel="stylesheet" />
 </head>
 <body >
 
@@ -33,10 +34,7 @@
             <div class="navbar-collapse collapse move-me">
                 <ul class="nav navbar-nav navbar-right">
                     <li ><a href="#home">HOME</a></li>
-                     <li><a href="#features-sec">FEATURES</a></li>
-                    <li><a href="#faculty-sec">FACULTY</a></li>
-                     <li><a href="#course-sec">COURSES</a></li>
-                     <li><a href="#contact-sec">CONTACT</a></li>
+                     <li><a href="#courseSearch-sec">COURSES</a></li>
                 </ul>
             </div>
 
@@ -56,11 +54,11 @@
                         <li>
                               <h3>Delivering Quality Education</h3>
                            <h1>THE UNIQUE METHOD</h1>
-                            <a  href="#features-sec" class="btn btn-info btn-lg" >
+                            <a  href="#courseSearch-sec" class="btn btn-info btn-lg" >
                                 GET AWESOME
                             </a>
-                             <a  href="#features-sec" class="btn btn-success btn-lg" >
-                                FEATURE LIST
+                             <a  href="#courseSearch-sec" class="btn btn-success btn-lg" >
+                                Search Courses
                             </a>
                         </li>
                         <!-- End Slider 01 -->
@@ -69,11 +67,11 @@
                         <li>
                             <h3>Delivering Quality Education</h3>
                            <h1>UNMATCHED APPROACH</h1>
-                             <a  href="#features-sec" class="btn btn-primary btn-lg" >
+                             <a  href="#courseSearch-sec" class="btn btn-primary btn-lg" >
                                GET AWESOME
                             </a>
-                             <a  href="#features-sec" class="btn btn-danger btn-lg" >
-                                FEATURE LIST
+                             <a  href="#courseSearch-sec" class="btn btn-danger btn-lg" >
+                                Search Courses
                             </a>
                         </li>
                         <!-- End Slider 02 -->
@@ -82,11 +80,11 @@
                         <li>
                             <h3>Delivering Quality Education</h3>
                            <h1>AWESOME FACULTY PANEL</h1>
-                             <a  href="#features-sec" class="btn btn-default btn-lg" >
+                             <a  href="#courseSearch-sec" class="btn btn-default btn-lg" >
                                 GET AWESOME
                             </a>
-                             <a  href="#features-sec" class="btn btn-info btn-lg" >
-                                FEATURE LIST
+                             <a  href="#courseSearch-sec" class="btn btn-info btn-lg" >
+                                Search Courses
                             </a>
                         </li>
                         <!-- End Slider 03 -->
@@ -117,15 +115,13 @@
 
     </div>
     <!--HOME SECTION TAG LINE END-->
-         <div id="features-sec" class="container set-pad" >
+    <!-- courseSearch-sec start -->
+    <div id="courseSearch-sec" class="container set-pad" >
              <div class="row text-center">
                  <div class="col-lg-8 col-lg-offset-2 col-md-8 col-sm-8 col-md-offset-2 col-sm-offset-2">
-                     <h1 data-scroll-reveal="enter from the bottom after 0.2s"  class="header-line">FEATURE LIST </h1>
+                     <h1 data-scroll-reveal="enter from the bottom after 0.2s"  class="header-line">Search Courses</h1>
                      <p data-scroll-reveal="enter from the bottom after 0.3s" >
-                      Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-                        Aenean commodo.
-                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-                        Aenean commodo.
+
                          </p>
                  </div>
 
@@ -133,278 +129,47 @@
              <!--/.HEADER LINE END-->
 
 
-           <div class="row" >
+           <div class="row searchCourseTableContainer" >
+                <table class="table table-striped table-hover">
+        <thead class="thead-light">
+            <tr>
+                <th scope="col">image</th>
+                <th scope="col">courseId</th>
+                <th scope="col">title</th>
+                <th scope="col">price</th>
+                <th scope="col">category</th>
+            </tr>
+        </thead>
+        {% for course in courses %}
+            <tr title="مشاهده درس" style="cursor:pointer" class="trCourse">
+                <td><img class='courseImage' src="{{course.image.url}}"></td>
+                <td>{{course.courseId}}</td>
+                <td>{{course.title}}</td>
+                <td>{{course.price}} $</td>
+                <td>{{course.category}}</td>
+            </tr>
+        {% endfor %}
+    </table>
+                <div class="pagination">
+        <span class="step-links">
+            {% if courses.has_previous %}
+                <a href="?page=1">&laquo; first</a>
+                <a href="?page={{ courses.previous_page_number }}">previous</a>
+            {% endif %}
 
+            <span class="current">
+                Page {{ courses.number }} of {{ courses.paginator.num_pages }}.
+            </span>
 
-                 <div class="col-lg-4  col-md-4 col-sm-4" data-scroll-reveal="enter from the bottom after 0.4s">
-                     <div class="about-div">
-                     <i class="fa fa-paper-plane-o fa-4x icon-round-border" ></i>
-                   <h3 >Quality Education</h3>
-                 <hr />
-                       <hr />
-                   <p >
-                       Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-                        Aenean commodo .
-
-                   </p>
-               <a href="#" class="btn btn-info btn-set"  >ASK THE EXPERT</a>
-                </div>
-                   </div>
-                   <div class="col-lg-4  col-md-4 col-sm-4" data-scroll-reveal="enter from the bottom after 0.5s">
-                     <div class="about-div">
-                     <i class="fa fa-bolt fa-4x icon-round-border" ></i>
-                   <h3 >SYSTEMATIC APPROACH</h3>
-                 <hr />
-                       <hr />
-                   <p >
-                       Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-                        Aenean commodo .
-
-                   </p>
-               <a href="#" class="btn btn-info btn-set"  >ASK THE EXPERT</a>
-                </div>
-                   </div>
-                 <div class="col-lg-4  col-md-4 col-sm-4" data-scroll-reveal="enter from the bottom after 0.6s">
-                     <div class="about-div">
-                     <i class="fa fa-magic fa-4x icon-round-border" ></i>
-                   <h3 >ONE TO ONE STUDY</h3>
-                 <hr />
-                       <hr />
-                   <p >
-                       Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-                        Aenean commodo .
-
-                   </p>
-               <a href="#" class="btn btn-info btn-set"  >ASK THE EXPERT</a>
-                </div>
-                   </div>
-
-
-               </div>
-             </div>
-   <!-- FEATURES SECTION END-->
-    <div id="faculty-sec" >
-    <div class="container set-pad">
-             <div class="row text-center">
-                 <div class="col-lg-8 col-lg-offset-2 col-md-8 col-sm-8 col-md-offset-2 col-sm-offset-2">
-                     <h1 data-scroll-reveal="enter from the bottom after 0.1s" class="header-line">OUR FACULTY </h1>
-                     <p data-scroll-reveal="enter from the bottom after 0.3s">
-                      Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-                        Aenean commodo.
-                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-                        Aenean commodo.
-                         </p>
-                 </div>
-
-             </div>
-             <!--/.HEADER LINE END-->
-
-           <div class="row" >
-
-
-                 <div class="col-lg-4  col-md-4 col-sm-4" data-scroll-reveal="enter from the bottom after 0.4s">
-                     <div class="faculty-div">
-                     <img src="{% static 'img/faculty/1.jpg' %}"  class="img-rounded" />
-                   <h3 >ROXI CHI LUENA </h3>
-                 <hr />
-                         <h4>Desigining <br /> Department</h4>
-                   <p >
-                       Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-                        Aenean commodo .
-
-                   </p>
-                </div>
-                   </div>
-                 <div class="col-lg-4  col-md-4 col-sm-4" data-scroll-reveal="enter from the bottom after 0.5s">
-                     <div class="faculty-div">
-                     <img src="{% static 'img/faculty/2.jpg' %}"  class="img-rounded" />
-                   <h3 >JANE DEO ALEX</h3>
-                 <hr />
-                         <h4>Enginering <br /> Department</h4>
-                   <p >
-                       Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-                        Aenean commodo .
-
-                   </p>
-                </div>
-                   </div>
-               <div class="col-lg-4  col-md-4 col-sm-4" data-scroll-reveal="enter from the bottom after 0.6s">
-                     <div class="faculty-div">
-                     <img src="{% static 'img/faculty/3.jpg' %}" class="img-rounded" />
-                   <h3 >RUBY DECORSA</h3>
-                 <hr />
-                         <h4>Management <br /> Department</h4>
-                   <p >
-                       Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-                        Aenean commodo .
-
-                   </p>
-                </div>
-                   </div>
-
-               </div>
-             </div>
-        </div>
-    <!-- FACULTY SECTION END-->
-      <div id="course-sec" class="container set-pad">
-             <div class="row text-center">
-                 <div class="col-lg-8 col-lg-offset-2 col-md-8 col-sm-8 col-md-offset-2 col-sm-offset-2">
-                     <h1 data-scroll-reveal="enter from the bottom after 0.1s" class="header-line">OUR COURSES </h1>
-                     <p data-scroll-reveal="enter from the bottom after 0.3s">
-                      Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-                        Aenean commodo.
-                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-                        Aenean commodo.
-                         </p>
-                 </div>
-
-             </div>
-             <!--/.HEADER LINE END-->
-
-
-           <div class="row set-row-pad" >
-           <div class="col-lg-6 col-md-6 col-sm-6 " data-scroll-reveal="enter from the bottom after 0.4s" >
-                 <img src="{% static 'img/building.jpg' %}" class="img-thumbnail" />
+            {% if courses.has_next %}
+                <a href="?page={{ courses.next_page_number }}">next</a>
+                <a href="?page={{ courses.paginator.num_pages }}">last &raquo;</a>
+            {% endif %}
+        </span>
+    </div>
            </div>
-               <div class="col-lg-4 col-md-4 col-sm-4 col-lg-offset-1 col-md-offset-1 col-sm-offset-1">
-                   <div class="panel-group" id="accordion">
-                        <div class="panel panel-default" data-scroll-reveal="enter from the bottom after 0.5s">
-                            <div class="panel-heading" >
-                                <h4 class="panel-title">
-                                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse1" class="collapsed">
-                                  <strong>   350+</strong> DESIGNING COURSES
-                                    </a>
-                                </h4>
-                            </div>
-                            <div id="collapse1" class="panel-collapse collapse" style="height: 0px;">
-                                <div class="panel-body">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sagittis egestas mauris ut vehicula. Cras viverra ac orci ac aliquam. Nulla eget condimentum mauris, eget tincidunt est.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="panel panel-default" data-scroll-reveal="enter from the bottom after 0.7s">
-                            <div class="panel-heading">
-                                <h4 class="panel-title">
-                                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse2" class="collapsed">
-                                      <strong>   250+</strong> ENGINEERING COURSES
-                                    </a>
-                                </h4>
-                            </div>
-                            <div id="collapse2" class="panel-collapse collapse" style="height: 0px;">
-                                <div class="panel-body">
-                                    <p>
-                                       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sagittis egestas mauris ut vehicula. Cras viverra ac orci ac aliquam. Nulla eget condimentum mauris, eget tincidunt est.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="panel panel-default" data-scroll-reveal="enter from the bottom after 0.9s">
-                            <div class="panel-heading">
-                                <h4 class="panel-title">
-                                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse3" class="collapsed">
-                                        <strong>   153+</strong> MANAGEMENT COURSES
-                                    </a>
-                                </h4>
-                            </div>
-                            <div id="collapse3" class="panel-collapse collapse"  style="height: 0px;">
-                                <div class="panel-body">
-                                    <p>
-                                       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sagittis egestas mauris ut vehicula. Cras viverra ac orci ac aliquam. Nulla eget condimentum mauris, eget tincidunt est.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                   <div class="alert alert-info" data-scroll-reveal="enter from the bottom after 1.1s" >
-                       <span style="font-size:40px;">
-                          <strong> 2500 + </strong>
-                           <hr />
-                           Centers
-                       </span>
-                   </div>
-           </div>
-
-
-
-               </div>
-             </div>
-      <!-- COURSES SECTION END-->
-    <div id="contact-sec"   >
-           <div class="overlay">
- <div class="container set-pad">
-      <div class="row text-center">
-                 <div class="col-lg-8 col-lg-offset-2 col-md-8 col-sm-8 col-md-offset-2 col-sm-offset-2">
-                     <h1 data-scroll-reveal="enter from the bottom after 0.1s" class="header-line" >CONTACT US  </h1>
-                     <p data-scroll-reveal="enter from the bottom after 0.3s">
-                      Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-                        Aenean commodo.
-                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-                        Aenean commodo.
-                         </p>
-                 </div>
-
-             </div>
-             <!--/.HEADER LINE END-->
-           <div class="row set-row-pad"  data-scroll-reveal="enter from the bottom after 0.5s" >
-
-
-                 <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
-                    <form>
-                        <div class="form-group">
-                            <input type="text" class="form-control "  required="required" placeholder="Your Name" />
-                        </div>
-                        <div class="form-group">
-                            <input type="text" class="form-control " required="required"  placeholder="Your Email" />
-                        </div>
-                        <div class="form-group">
-                            <textarea name="message" required="required" class="form-control" style="min-height: 150px;" placeholder="Message"></textarea>
-                        </div>
-                        <div class="form-group">
-                            <button type="submit" class="btn btn-info btn-block btn-lg">SUBMIT REQUEST</button>
-                        </div>
-
-                    </form>
-                </div>
-
-
-
-
-
-
-               </div>
-                </div>
-          </div>
-       </div>
-     <div class="container">
-             <div class="row set-row-pad"  >
-    <div class="col-lg-4 col-md-4 col-sm-4   col-lg-offset-1 col-md-offset-1 col-sm-offset-1 " data-scroll-reveal="enter from the bottom after 0.4s">
-
-                    <h2 ><strong>Our Location </strong></h2>
-        <hr />
-                    <div ">
-                        <h4>234/80 -UFG , New Street,</h4>
-                        <h4>Switzerland.</h4>
-                        <h4><strong>Call:</strong>  + 67-098-907-1269 / 70 / 71 </h4>
-                        <h4><strong>Email: </strong>info@yourdomain.com</h4>
-                    </div>
-
-
-                </div>
-                 <div class="col-lg-4 col-md-4 col-sm-4   col-lg-offset-1 col-md-offset-1 col-sm-offset-1" data-scroll-reveal="enter from the bottom after 0.4s">
-
-                    <h2 ><strong>Social Conectivity </strong></h2>
-        <hr />
-                    <div >
-                        <a href="#">  <img src="{% static 'img/Social/facebook.png' %}" alt="" /> </a>
-                     <a href="#"> <img src="{% static 'img/Social/google-plus.png' %}" alt="" /></a>
-                     <a href="#"> <img src="{% static 'img/Social/twitter.png' %}" alt="" /></a>
-                    </div>
-                    </div>
-
-
-                </div>
-                 </div>
-     <!-- CONTACT SECTION END-->
+    </div>
+    <!--  courseSearch-sec End  -->
     <div id="footer">
           &copy 2014 yourdomain.com | All Rights Reserved |  <a href="http://binarytheme.com" style="color: #fff" target="_blank">Design by : binarytheme.com</a>
     </div>
