--- a/OnlineCourseProject/OnlineCourseApp/templates/dashboard.html
+++ b/OnlineCourseProject/OnlineCourseApp/templates/dashboard.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
-    <link rel='stylesheet' type='text/css' href="{% static 'css/dashboard.css' %}" />
+    <link rel='stylesheet' type='text/css' href="{% static 'css/onlineCourse.css' %}" />
     <script type='text/javascript' charset='utf8' src="{% static 'js/jquery-1.11.3.min.js' %}"></script>
 
 </head>
