--- a/OnlineCourseProject/OnlineCourseApp/templates/index.html
+++ b/OnlineCourseProject/OnlineCourseApp/templates/index.html
@@ -17,7 +17,7 @@
     <link href="{% static 'css/style.css' %}" rel="stylesheet" />
   <!-- Google	Fonts -->
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css' />
-    <link href="{% static 'css/dashboard.css' %}" rel="stylesheet" />
+    <link href="{% static 'css/onlineCourse.css' %}" rel="stylesheet" />
 </head>
 <body >
 
@@ -121,8 +121,12 @@
                  <div class="col-lg-8 col-lg-offset-2 col-md-8 col-sm-8 col-md-offset-2 col-sm-offset-2">
                      <h1 data-scroll-reveal="enter from the bottom after 0.2s"  class="header-line">Search Courses</h1>
                      <p data-scroll-reveal="enter from the bottom after 0.3s" >
-
-                         </p>
+                         <form class="searchCourse" action="{% url 'search_courses' %}" method="post">
+                            {% csrf_token %}
+                            <input type="text" placeholder="Search.." name="searchCourseInput">
+                            <button type="submit"><i class="fa fa-search"></i></button>
+                        </form>
+                     </p>
                  </div>
 
              </div>
