--- a/OnlineCourseProject/OnlineCourseApp/templates/login.html
+++ b/OnlineCourseProject/OnlineCourseApp/templates/login.html
@@ -62,6 +62,16 @@
                 <label for="signup_password_confirm">Confirm password</label>
                 <input id="signup_password_confirm" name="password_confirm" type="password" required>
               </div>
+              <div class="input-block">
+                <label class="checkcontainer">Instructor
+                  <input type="radio" checked="checked" value="instructor" name="userType">
+                  <span class="radiobtn"></span>
+                </label>
+                <label class="checkcontainer">Student
+                  <input type="radio" checked="checked" value="student" name="userType">
+                  <span class="radiobtn"></span>
+                </label>
+              </div>
             </fieldset>
             <button type="submit" class="btn-signup">Continue</button>
           </form>
