--- a/OnlineCourseProject/OnlineCourseApp/static/css/loginPage.css
+++ b/OnlineCourseProject/OnlineCourseApp/static/css/loginPage.css
@@ -283,3 +283,52 @@ body {
 	box-shadow: inset 0 0 0 2px #a7e245;
 	transform: translateX(30%);
 }
+.checkcontainer {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 17px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+.checkcontainer input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+}
+}
+[type=checkbox], [type=radio] {
+    padding: 0;
+}
+.radiobtn {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #eee;
+    border-radius: 50%;
+}
+.radiobtn:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+.checkcontainer .radiobtn:after {
+    top: 9px;
+    left: 9px;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background: white;
+}
+.checkcontainer input:checked ~ .radiobtn:after {
+    display: block;
+}
+.checkcontainer input:checked ~ .radiobtn {
+    background-color: #2196F3;
+}
