--- a/OnlineCourseProject/OnlineCourseApp/templates/create_courses.html
+++ b/OnlineCourseProject/OnlineCourseApp/templates/create_courses.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="formContainer">
         <h1>{{ title }}</h1>
-        <form action="{% url 'save_course' %}" method="post">
+        <form action="{% url 'save_course' %}" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             <table>
                 {{ form.as_table }}
